--- a/hw-js-01/index.html
+++ b/hw-js-01/index.html
@@ -10,12 +10,12 @@
 
 <body>
 
-  <!-- <script type="module" src="./JS/task-01.js"></script>
+  <script type="module" src="./JS/task-01.js"></script>
   <script type="module" src="./JS/task-02.js"></script>
   <script type="module" src="./JS/task-03.js"></script>
-  <script type="module" src="./JS/task-04.js"></script> -->
+  <script type="module" src="./JS/task-04.js"></script>
   <script type="module" src="./JS/task-05.js"></script>
-  <!-- <script type="module" src="./JS/task-06.js"></script> -->
+  <script type="module" src="./JS/task-06.js"></script>
 </body>
 
 </html>
