--- a/hw-js-11/index.html
+++ b/hw-js-11/index.html
@@ -75,9 +75,9 @@
 <body>
 
   <script type="module" src="./js/task-01.js"></script>
-  <!-- <script type="module" src="./js/task-01-promise.js"></script>
-  <script type="module" src="./js/task-02-promise.js"></script>  -->
-  <!-- <script type="module" src="./js/task-03-promise.js"></script> -->
+  <script type="module" src="./js/task-01-promise.js"></script>
+  <script type="module" src="./js/task-02-promise.js"></script>
+  <script type="module" src="./js/task-03-promise.js"></script>
   <script src="./js/timer.js"></script>
 </body>
 
