--- a/hw-js-02/index.html
+++ b/hw-js-02/index.html
@@ -10,13 +10,13 @@
 
 <body>
 
-  <script type="module" src="./JS/task-01.js"></script>
+  <!-- <script type="module" src="./JS/task-01.js"></script>
   <script type="module" src="./JS/task-02.js"></script>
   <script type="module" src="./JS/task-03.js"></script>
   <script type="module" src="./JS/task-04.js"></script>
-  <script type="module" src="./JS/task-05.js"></script>
+  <script type="module" src="./JS/task-05.js"></script> -->
   <script type="module" src="./JS/task-06.js"></script>
-  <script type="module" src="./JS/task-07.js"></script>
+  <!-- <script type="module" src="./JS/task-07.js"></script> -->
 
 </body>
 
