--- a/hw-js-06/index.html
+++ b/hw-js-06/index.html
@@ -20,7 +20,7 @@
   <script type="module" src="./JS/task-08.js"></script>
   <script type="module" src="./JS/task-09.js"></script>
   <script type="module" src="./JS/task-10.js"></script>
-  <script type="module" src="./JS/users.js"></script>
+  <!-- <script type="module" src="./JS/users.js"></script> -->
 
 </body>
 
